# Underwater_2021_2022

./: .gitignore  Dockerfile.gs  Dockerfile.rov  README.md  docker-setup.sh  dockerfile  jetson.dockerfile
.devcontainer/: devcontainer.json
microcontrollers/ard_esp32/: README.md  ard_esp32.ino  config.h
microcontrollers/aux_esp32/: CMakeLists.txt  README.md  esp32.dockerfile
microcontrollers/aux_esp32/.devcontainer/: devcontainer.json
microcontrollers/aux_esp32/main/: main.c
software/: setup.sh
software/ros_pkgs/rov_control/: CMakeLists.txt  package.xml
software/ros_pkgs/rov_control/msg/: gamepad.msg
software/ros_pkgs/rov_control/src/: controller.py  controllerDecoder.py  controller_no_ros.py  gamepad_recorder.py  input_recorder.py  readme.txt  test.py  thrust_converter.py
software/ros_pkgs/rov_control/src/test/: test_controller.py
software/ros_pkgs/rov_main/: CMakeLists.txt  package.xml
software/ros_pkgs/rov_main/launch/: ground_station.launch  gs_send_topic.yaml  rov.launch  rov_send_topic.yaml
software/ros_pkgs/rov_main/launch/ground_station/: topic_transport.launch  topic_transport_receivers.launch
software/ros_pkgs/rov_main/launch/rov/: camera.launch  topic_transport.launch  topic_transport_senders.launch
