<?xml version="1.0"?>
<package format="2">
  <name>rov_control</name>
  <version>1.0.0</version>
  <description>
  Main package for getting gamepad input
  </description>
  <maintainer email="jesudasn@oregonstate.edu">Nathan Jesudason</maintainer>
  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  
  </export>
</package>

